--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			var x11 = document.getElementById("a11").value;
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "23011A0201") {
-				window.open ("file:///Users/code-sk/Desktop/index.html");
+				window.open ("E1.html");
 			} else {
 				alert("onok");
 			}
