--- a/index.html
+++ b/index.html
@@ -52,14 +52,10 @@
 		function but1() {
 			//roll no and names
 			
-
-
-
-
 			var x11 = document.getElementById("a11").value;
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "23011A0201") {
-				window.open ("E1.html");
+				window.open (E1.html);
 			} else {
 				alert("onok");
 			}
