--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "23011A0201") {
 				window.open (E1.html);
-			} else {
-				alert("onok");
+			}
+			else if(x11 == "23011A0202"){
+				window.open (E2.html);
+			}
+			else if(x11 == "23011A0203"){
+				window.open (E3.html);
 			}
 		}
 	</script>
