--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "23011A0201") {
 				window.open (E1.html);
+			}else {
+				alert("okok")
 			}
-			
 		}
 	</script>
