--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "23011A0201") {
 				window.open(E1.html);
-			} else {
-				alert("onok");
+			} else if (x11 == "23011A0201"){
+				window.open(E2.html);
 			}
 		}
 	</script>
