--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			var x11 = document.getElementById("a11").value;
 			var x12 = document.getElementById("a12").value;
 			if (x11 == "123"){
-			    window.open(E1.html);
+			    window.open("E1.html");
 			} 
 		}
 	</script>
