--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 <script type="text/javascript">
 //FUNCTION [LOGIC]
 		function but1() {
-			var x11 = document.getElementById("a11").value;
-			var x12 = document.getElementById("a12").value;
-			if (x11 == "123"){
+			var rn = document.getElementById("a11").value;
+			if (rn == "123"){
 			    window.open("E1.html");
 			} 
 		}
