--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	        padding: 0px;
 	    }
 		#a11,#a12,#a13,#a21,#a22,#a23,#a31,#a32,#a33,#b11,#b12,#b13,#b21,#b22,#b23,#b31,#b32,#b33{
-			background-color: lightblue;
+/* 			background-color: lightblue; */
 			height: 40px;
 			width:40px;
-			border-radius: 18px;
-			border-color: red;
+/* 			border-radius: 18px; */
+/* 			border-color: red; */
 			box-shadow: 50%;
 		}
 		h1{
