--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	    }
 		#a11,#a12,#a13,#a21,#a22,#a23,#a31,#a32,#a33,#b11,#b12,#b13,#b21,#b22,#b23,#b31,#b32,#b33{
 /* 			background-color: lightblue; */
-			height: 40px;
-			width:40px;
-/* 			border-radius: 18px; */
+			height: 30px;
+			width:200px;
+			border-radius: 9px;
 /* 			border-color: red; */
 			box-shadow: 50%;
 		}
@@ -36,15 +36,16 @@
 }
 	</style>
 </head>
-<body>
+<body bgcolor="black">
 <center>
+	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
 	<br>
-	<input type="text" id="a11" size="3" name=""><br>
-	<input type="text" id="a12" size="3" name=""><br>
+	<font size="6" color="green">ROLL NO: </font><input type="text" id="a11" size="30" name=""><br><br><br><br>
+	<font size="6" color="green">CAPCHA: </font><input type="text" id="a12" size="30" name=""><br><br>
 	
 
 	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="red"><b>SUBMIT</b></font></button><br><br><br><br><br><br><br>
-
+	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="120">
 
 </center>
 <script type="text/javascript">
