--- a/E14.html
+++ b/E14.html
@@ -1,337 +1,86 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MC</title>
-	<style type="text/css">
-	    body{
-	        background-image: url("bgimg.jpeg");
-	        background-size: 100%;
-	        margin: 0px;
-	        padding: 0px;
-	    }
-		#a11,#a12,#a13,#a21,#a22,#a23,#a31,#a32,#a33,#b11,#b12,#b13,#b21,#b22,#b23,#b31,#b32,#b33{
-/* 			background-color: lightblue; */
-			height: 30px;
-			width:200px;
-			border-radius: 9px;
-/* 			border-color: red; */
-			box-shadow: 50%;
-		}
-		h1{
-		    size:100px;
-		    color: green;
-		    padding: 0px;
-		    margin: 0px;
-		    text-align: center;	
-		    text-shadow: 30px;
-		    border-color: red;
-		    font-family:fantasy;
-		}
-		img {
-            border-radius: 50%;
-            width:150px;
-            height:150px;
-}
-	</style>
-</head>
-<body bgcolor="black">
-<center>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
+    <head><title>
+            JNTUH 1-1 SEM RESULTS
+    </title></head>
+
+<body bgcolor="white">
+	<center>
+        <img src="file:///Users/code-sk/Desktop/Screenshot%202024-03-31%20at%208.35.54%E2%80%AFPM.png" width="1200">
+	<table border="1" cellspacing="5" bgcolor="white">
+		<caption><b>Input Marks</b></caption>
+		<tr>
+			<th rowspan="2">Name</th>
+			<th colspan="8">Score</th>
+
+		</tr>
+		<tr>
+			<th>22CO1</th>
+			<th>22CO1L</th>
+			<th>22CS01</th>
+			<th>22CS01L</th>
+            <th>22EE01</th>
+            <th>22EE02L</th>
+            <th>22M01</th>
+            <th>22ME02</th>
+		</tr>
+		<tr>
+			<th>PREM KIRAN CHAKRALA</th>
+			<th>8</th>
+			<th>6</th>
+			<th>7</th>
+			<th>9</th>
+            <th>9</th>
+            <th>5</th>
+            <th>9</th>
+            <th>6</th>
+		</tr>
+		<tr>
+			<!-- <th colspan="5" height="30"> -->
+			<!-- <input type="submit" value="Add To Table" onclick="Sub()"></th> -->
+		</tr> 
+	</table>
 	<br>
-	<font size="6" color="green">ROLL NO: </font><input type="text" id="a11" size="30" name=""><br><br><br><br>
-	<font size="6" color="green">CAPCHA: </font><input type="text" id="a12" size="30" name=""><br><br>
-	
+	<table border="1" cellspacing="5" bgcolor="white"
+		height="100" width="500" cellpadding="5" id="TableScore">
+		<caption><b>Student Data</b></caption>
+		<tr>
+			<th width="180">PREM KIRAN CHAKRALA</th>
+			<th>Total CGPA</th>
+			<th>0</th>
+			<th>FAIL</th>
+		</tr>
+		
+	</table>
+	</center>
+	<script type="text/javascript">
+		function Sub(){
+			let n, k, r, e, v, sum, avg;
+			n=(document.getElementById('aname').value);
+			k=parseFloat(document.getElementById('am').value);
+			r=parseFloat(document.getElementById('aj').value);
+			e=parseFloat(document.getElementById('ad').value);
+			v=parseFloat(document.getElementById('an').value);
+			// Calculating Total
+			sum=k+r+e+v;
+			avg=sum/4;
+			// Display on Student Data
+			let newTable = document.getElementById('TableScore');
+			let row = newTable.insertRow(-1);
+			let cell1 = row.insertCell(0);
+			let cell2 = row.insertCell(0);
+			let cell3 = row.insertCell(0);
+			let cell4 = row.insertCell(0);
 
-	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="red"><b>SUBMIT</b></font></button><br><br><br><br><br><br><br>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="120">
+			cell4.innerHTML= n;
+			cell3.innerHTML=sum;
+			cell2.innerHTML = avg;
 
-</center>
-<script type="text/javascript">
-//FUNCTION [LOGIC]
-		function but1() {
-			var rn = document.getElementById("a11").value;
-			if (rn == "23011A0201"){
-			    window.open("E1.html");
-			} 
-
-			if (rn == "23011A0202"){
-			    window.open("E2.html");
-			} 
-
-			if (rn == "23011A0203"){
-			    window.open("E3.html");
-			} 
-
-			if (rn == "23011A0204"){
-			    window.open("E4.html");
-			} 
-
-			if (rn == "23011A0205"){
-			    window.open("E5.html");
-			} 
-
-			if (rn == "23011A0206"){
-			    window.open("E6.html");
-			} 
-
-			if (rn == "23011A0207"){
-			    window.open("E7.html");
-			} 
-
-			if (rn == "23011A0208"){
-			    window.open("E8.html");
-			} 
-
-			if (rn == "23011A0209"){
-			    window.open("E9.html");
-			} 
-
-			if (rn == "23011A0210"){
-			    window.open("E10.html");
-			} 
-
-
-			if (rn == "23011A0211"){
-			    window.open("E11.html");
-			} 
-
-			if (rn == "23011A0212"){
-			    window.open("E12.html");
-			} 
-
-			if (rn == "23011A0213"){
-			    window.open("E13.html");
-			} 
-
-			if (rn == "23011A0214"){
-			    window.open("E14.html");
-			} 
-
-			if (rn == "23011A0215"){
-			    window.open("E15.html");
-			} 
-
-			if (rn == "23011A0216"){
-			    window.open("E16.html");
-			} 
-
-			if (rn == "23011A0217"){
-			    window.open("E17.html");
-			} 
-
-			if (rn == "23011A0218"){
-			    window.open("E18.html");
-			} 
-
-			if (rn == "23011A0219"){
-			    window.open("E19.html");
-			} 
-
-			if (rn == "23011A0220"){
-			    window.open("E20.html");
-			} 
-
-			if (rn == "23011A0221"){
-			    window.open("E21.html");
-			} 
-
-
-			if (rn == "23011A0222"){
-			    window.open("E22.html");
-			} 
-
-			if (rn == "23011A0223"){
-			    window.open("E23.html");
-			} 
-
-			if (rn == "23011A0224"){
-			    window.open("E24.html");
-			} 
-
-			if (rn == "23011A0225"){
-			    window.open("E25.html");
-			} 
-
-			if (rn == "26"){
-			    window.open("E26.html");
-			} 
-
-			if (rn == "23011A0227"){
-			    window.open("E27.html");
-			} 
-
-			if (rn == "23011A0227"){
-			    window.open("E27.html");
-			} 
-
-			if (rn == "23011A0228"){
-			    window.open("E28.html");
-			} 
-
-			if (rn == "23011A0229"){
-			    window.open("E29.html");
-			} 
-
-			if (rn == "23011A0230"){
-			    window.open("E30.html");
-			} 
-
-			if (rn == "23011A0231"){
-			    window.open("E31.html");
-			} 
-
-			if (rn == "23011A0232"){
-			    window.open("E32.html");
-			} 
-
-			if (rn == "23011A0227"){
-			    window.open("E27.html");
-			} 
-
-			if (rn == "23011A0233"){
-			    window.open("E33.html");
-			} 
-
-			if (rn == "23011A0234"){
-			    window.open("E34.html");
-			} 
-
-			if (rn == "23011A0235"){
-			    window.open("E35.html");
-			} 
-
-			if (rn == "23011A0236"){
-			    window.open("E36.html");
-			} 
-
-			if (rn == "23011A0237"){
-			    window.open("E37.html");
-			} 
-
-			if (rn == "23011A0238"){
-			    window.open("E38.html");
-			} 
-
-			if (rn == "23011A0239"){
-			    window.open("E39.html");
-			} 
-
-			if (rn == "23011A0240"){
-			    window.open("E40.html");
-			} 
-
-			if (rn == "23011A0241"){
-			    window.open("E41.html");
-			} 
-
-			if (rn == "23011A0242"){
-			    window.open("E42.html");
-			} 
-
-			if (rn == "23011A0243"){
-			    window.open("E43.html");
+			if(avg>=70){
+				cell1.innerHTML="<font color=green>Pass</font>";
+			}else{
+				cell1.innerHTML="<font color=red>Fail</font>";
 			}
-
-			if (rn == "23011A0244"){
-			    window.open("E44.html");
-			}
-
-			if (rn == "23011A0245"){
-			    window.open("E45.html");
-			}
-
-			if (rn == "23011A0246"){
-			    window.open("E46.html");
-			}
-
-			if (rn == "23011A0247"){
-			    window.open("E47.html");
-			}
-
-			if (rn == "23011A0248"){
-			    window.open("E48.html");
-			}
-
-			if (rn == "23011A0249"){
-			    window.open("E49.html");
-			}
-
-			if (rn == "23011A0250"){
-			    window.open("E50.html");
-			}
-
-			if (rn == "23011A0251"){
-			    window.open("E51.html");
-			}
-
-			if (rn == "23011A0252"){
-			    window.open("E52.html");
-			}
-
-			if (rn == "23011A0253"){
-			    window.open("E53.html");
-			}
-			if (rn == "23011A0254"){
-			    window.open("E54.html");
-			}
-
-			if (rn == "23011A0255"){
-			    window.open("E55.html");
-			}
-
-			if (rn == "23011A0256"){
-			    window.open("E56.html");
-			}
-
-			if (rn == "23011A0257"){
-			    window.open("E57.html");
-			}
-
-			if (rn == "23011A0258"){
-			    window.open("E58.html");
-			}
-
-			if (rn == "23011A0259"){
-			    window.open("E59.html");
-			}
-
-			if (rn == "23011A0260"){
-			    window.open("E60.html");
-			}
-
-			if (rn == "23011A0261"){
-			    window.open("E61.html");
-			}
-
-			if (rn == "23011A02462"){
-			    window.open("E62.html");
-			}
-
-			if (rn == "23011A0263"){
-			    window.open("E63.html");
-			}
-
-			if (rn == "23011A0264"){
-			    window.open("E64.html");
-			}
-
-			if (rn == "23011A0265"){
-			    window.open("E65.html");
-			}
-
-			if (rn == "23011A0266"){
-			    window.open("E66.html");
-				
-			}
-			if (rn == "23011A0266"){
-			    window.open("E66.html");
-			}
-			if (rn == "23011A0267"){
-			    window.open("E67.html");
-			}
-			
 		}
 	</script>
 </body>
