--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 }
 	</style>
 </head>
-<body bgcolor="black">
+<body bgcolor="white">
 <center>
 	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
 	<br>
