--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 }
 	</style>
 </head>
-<body bgcolor="white">
+<body>
 <center>
 	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
 	<br>
@@ -45,7 +45,7 @@
 	
 
 	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="red"><b>SUBMIT</b></font></button><br><br><br><br><br><br><br>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="120">
+	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png">
 
 </center>
 <script type="text/javascript">
