--- a/index.html
+++ b/index.html
@@ -29,24 +29,39 @@
 		    border-color: red;
 		    font-family:fantasy;
 		}
-		img {
+		/* img {
             border-radius: 50%;
             width:150px;
             height:150px;
+} */
+
+.main1{
+	background: 20px;
+	background-color: #9e9a9a;
+	border-color: black;
+	
+	background-size: 20px;
+	border: 10%;
+	border-radius: 4%;
+	width: 700px;
+	height: 300px;
 }
 	</style>
 </head>
 <body>
 <center>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
+	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="1200" height="200">
+	<div class="main1">
+	
 	<br>
-	<font size="6" color="green">ROLL NO: </font><input type="text" id="a11" size="30" name=""><br><br><br><br>
-	<font size="6" color="green">CAPCHA: </font><input type="text" id="a12" size="30" name=""><br><br>
+	<font size="6" color="black"><b>ROLL NO:</b> </font><input type="text" id="a11" size="30" name=""><br><br><br><br>
+	<font size="6" color="black"><b>CAPCHA:</b> </font><input type="text" id="a12" size="30" name=""><br><br>
 	
 
-	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="red"><b>SUBMIT</b></font></button><br><br><br><br><br><br><br>
-	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png">
-
+	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="black"><b>GET</b></font></button><br><br><br><br><br><br><br>
+	<font size="6" color="green">Enter CAPCHA As Shown: </font><br>
+	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png" width="400" height="70">
+</div>
 </center>
 <script type="text/javascript">
 //FUNCTION [LOGIC]
