--- a/E42.html
+++ b/E42.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="white">
 	<center>
-        <img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" width="1200">
+        <img src="file:///Users/code-sk/Desktop/Screenshot%202024-03-31%20at%208.35.54%E2%80%AFPM.png" width="1200">
 	<table border="1" cellspacing="5" bgcolor="white">
 		<caption><b>Input Marks</b></caption>
 		<tr>
@@ -29,11 +29,11 @@
 			<th>8</th>
 			<th>7</th>
 			<th>7</th>
-			<th>8</th>
-            <th>7</th>
+			<th>6</th>
+            <th>8</th>
             <th>5</th>
+            <th>8</th>
             <th>7</th>
-            <th>6</th>
 		</tr>
 		<tr>
 			<!-- <th colspan="5" height="30"> -->
@@ -45,9 +45,9 @@
 		height="100" width="500" cellpadding="5" id="TableScore">
 		<caption><b>Student Data</b></caption>
 		<tr>
-			<th width="180"></th>BATHULA VARSHA</th>
+			<th width="180">BATHULA VARSHA</th>
 			<th>Total CGPA</th>
-			<th>7.8</th>
+			<th>7.4</th>
 			<th>PASS</th>
 		</tr>
 		
