--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 .main1{
 	background: 20px;
-	background-color: #9e9a9a;
+	background-color: lightblue;
 	border-color: black;
 	
 	background-size: 20px;
