--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MC</title>
+	<title>JNTUH 1-1 sem results </title>
 	<style type="text/css">
 	    body{
 	        background-image: url("bgimg.jpeg");
