--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
 			if (rn == "23011A0267"){
 			    window.open("E67.html");
 			}
-			
+			else{
+				document.write("Error 503 Service Unavailable")
+			}
 		}
 	</script>
 </body>
