--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	</style>
 </head>
 <body>
+	<script src="main.js"></script>
 <center>
 	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150">
 	<div class="main1">
@@ -63,287 +64,6 @@
 	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png" width="400" height="70">
 </div>
 </center>
-<script type="text/javascript">
-//FUNCTION [LOGIC]
-		function but1() {
-			var rn = document.getElementById("a11").value;
-			if (rn == "23011A0201"){
-			    window.open("E1.html");
-			} 
 
-			if (rn == "23011A0202"){
-			    window.open("E2.html");
-			} 
-
-			if (rn == "23011A0203"){
-			    window.open("E3.html");
-			} 
-
-			if (rn == "23011A0204"){
-			    window.open("E4.html");
-			} 
-
-			if (rn == "23011A0205"){
-			    window.open("E5.html");
-			} 
-
-			if (rn == "23011A0206"){
-			    window.open("E6.html");
-			} 
-
-			if (rn == "23011A0207"){
-			    window.open("E7.html");
-			} 
-
-			if (rn == "23011A0208"){
-			    window.open("E8.html");
-			} 
-
-			if (rn == "23011A0209"){
-			    window.open("E9.html");
-			} 
-
-			if (rn == "23011A0210"){
-			    window.open("E10.html");
-			} 
-
-
-			if (rn == "23011A0211"){
-			    window.open("E11.html");
-			} 
-
-			if (rn == "23011A0212"){
-			    window.open("E12.html");
-			} 
-
-			if (rn == "23011A0213"){
-			    window.open("E13.html");
-			} 
-
-			if (rn == "23011A0214"){
-			    window.open("E14.html");
-			} 
-
-			if (rn == "23011A0215"){
-			    window.open("E15.html");
-			} 
-
-			if (rn == "23011A0216"){
-			    window.open("E16.html");
-			} 
-
-			if (rn == "23011A0217"){
-			    window.open("E17.html");
-			} 
-
-			if (rn == "23011A0218"){
-			    window.open("E18.html");
-			} 
-
-			if (rn == "23011A0219"){
-			    window.open("E19.html");
-			} 
-
-			if (rn == "23011A0220"){
-			    window.open("E20.html");
-			} 
-
-			if (rn == "23011A0221"){
-			    window.open("E21.html");
-			} 
-
-
-			if (rn == "23011A0222"){
-			    window.open("E22.html");
-			} 
-
-			if (rn == "23011A0223"){
-			    window.open("E23.html");
-			} 
-
-			if (rn == "23011A0224"){
-			    window.open("E24.html");
-			} 
-
-			if (rn == "23011A0225"){
-			    window.open("E25.html");
-			} 
-
-			if (rn == "23011A0226"){
-			    window.open("E26.html");
-			} 
-
-			if (rn == "23011A0227"){
-			    window.open("E27.html");
-			} 
-
-
-			if (rn == "23011A0228"){
-			    window.open("E28.html");
-			} 
-
-			if (rn == "23011A0229"){
-			    window.open("E29.html");
-			} 
-
-			if (rn == "23011A0230"){
-			    window.open("E30.html");
-			} 
-
-			if (rn == "23011A0231"){
-			    window.open("E31.html");
-			} 
-
-			if (rn == "23011A0232"){
-			    window.open("E32.html");
-			} 
-
-			if (rn == "23011A0227"){
-			    window.open("E27.html");
-			} 
-
-			if (rn == "23011A0233"){
-			    window.open("E33.html");
-			} 
-
-			if (rn == "23011A0234"){
-			    window.open("E34.html");
-			} 
-
-			if (rn == "23011A0235"){
-			    window.open("E35.html");
-			} 
-
-			if (rn == "23011A0236"){
-			    window.open("E36.html");
-			} 
-
-			if (rn == "23011A0237"){
-			    window.open("E37.html");
-			} 
-
-			if (rn == "23011A0238"){
-			    window.open("E38.html");
-			} 
-
-			if (rn == "23011A0239"){
-			    window.open("E39.html");
-			} 
-
-			if (rn == "23011A0240"){
-			    window.open("E40.html");
-			} 
-
-			if (rn == "23011A0241"){
-			    window.open("E41.html");
-			} 
-
-			if (rn == "23011A0242"){
-			    window.open("E42.html");
-			} 
-
-			if (rn == "23011A0243"){
-			    window.open("E43.html");
-			}
-
-			if (rn == "23011A0244"){
-			    window.open("E44.html");
-			}
-
-			if (rn == "23011A0245"){
-			    window.open("E45.html");
-			}
-
-			if (rn == "23011A0246"){
-			    window.open("E46.html");
-			}
-
-			if (rn == "23011A0247"){
-			    window.open("E47.html");
-			}
-
-			if (rn == "23011A0248"){
-			    window.open("E48.html");
-			}
-
-			if (rn == "23011A0249"){
-			    window.open("E49.html");
-			}
-
-			if (rn == "23011A0250"){
-			    window.open("E50.html");
-			}
-
-			if (rn == "23011A0251"){
-			    window.open("E51.html");
-			}
-
-			if (rn == "23011A0252"){
-			    window.open("E52.html");
-			}
-
-			if (rn == "23011A0253"){
-			    window.open("E53.html");
-			}
-			if (rn == "23011A0254"){
-			    window.open("E54.html");
-			}
-
-			if (rn == "23011A0255"){
-			    window.open("E55.html");
-			}
-
-			if (rn == "23011A0256"){
-			    window.open("E56.html");
-			}
-
-			if (rn == "23011A0257"){
-			    window.open("E57.html");
-			}
-
-			if (rn == "23011A0258"){
-			    window.open("E58.html");
-			}
-
-			if (rn == "23011A0259"){
-			    window.open("E59.html");
-			}
-
-			if (rn == "23011A0260"){
-			    window.open("E60.html");
-			}
-
-			if (rn == "23011A0261"){
-			    window.open("E61.html");
-			}
-
-			if (rn == "23011A0262"){
-			    window.open("E62.html");
-			}
-
-			if (rn == "23011A0263"){
-			    window.open("E63.html");
-			}
-
-			if (rn == "23011A0264"){
-			    window.open("E64.html");
-			}
-
-			if (rn == "23011A0265"){
-			    window.open("E65.html");
-			}
-
-			if (rn == "23011A0266"){
-			    window.open("E66.html");
-				
-			}
-			if (rn == "23011A0267"){
-			    window.open("E67.html");
-			}
-			else{
-				document.write("Error 503 Service Unavailable")
-			}
-		}
-	</script>
 </body>
 </html>
