--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </center>
 
 
-<script type="text/javascript">
+<!-- <script type="text/javascript"> -->
 //FUNCTION [LOGIC]
 		function but1() {
 			var rn = document.getElementById("a11").value;
