--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 
 
 <!-- <script type="text/javascript"> -->
-//FUNCTION [LOGIC]
+<script>
+	
+					//FUNCTION [LOGIC]
+	
+	
 		function but1() {
 			var rn = document.getElementById("a11").value;
 			if (rn == "23011A0201"){
