--- a/E47.html
+++ b/E47.html
@@ -45,7 +45,8 @@
 		height="100" width="500" cellpadding="5" id="TableScore">
 		<caption><b>Student Data</b></caption>
 		<tr>
-			<th width="180"></th>PASULADI GANESH</th>
+			<th>PASULADI GANESH</th>
+			<th width="180"></th>
 			<th>Total CGPA</th>
 			<th>6.4</th>
 			<th>PASS</th>
