--- a/E48.html
+++ b/E48.html
@@ -45,7 +45,8 @@
 		height="100" width="500" cellpadding="5" id="TableScore">
 		<caption><b>Student Data</b></caption>
 		<tr>
-			<th width="180"></th>JAGADISH PASUNOORI</th>
+			<th>JAGADISH PASUNOORI</th>
+			<th width="180"></th>
 			<th>Total CGPA</th>
 			<th>7.4</th>
 			<th>PASS</th>
