--- a/E49.html
+++ b/E49.html
@@ -45,7 +45,8 @@
 		height="100" width="500" cellpadding="5" id="TableScore">
 		<caption><b>Student Data</b></caption>
 		<tr>
-			<th width="180"></th>APPIKATLA ANKITH PRAKLASH</th>
+			<th>APPIKATLA ANKITH PRAKLASH</th>
+			<th width="180"></th>
 			<th>Total CGPA</th>
 			<th>7.5</th>
 			<th>PASS</th>
