--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 				document.write("Error 503 Service Unavailable")
 			}
 		}
-	</script>
-
+	</script><br><br><br><br><br><br><br><br><br><br>
+<font>made by manoj cheekati </font>
 </body>
 </html>
