--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
 				document.write("Error 503 Service Unavailable")
 			}
 		}
-	</script><br><br><br><br><br><br><br><br><br><br>
-<font>made by manoj cheekati </font>
+	</script>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<font align="right">made by manoj cheekati </font>
 </body>
 </html>
