--- a/index.html
+++ b/index.html
@@ -74,277 +74,279 @@
 	
 		function but1() {
 			var rn = document.getElementById("a11").value;
-			if (rn == "23011A0201"){
+			var rc = document.getElementById("a12").value;
+			var cap = "1738"
+			if (rn == "23011A0201" && rc == cap){
 			    window.open("E1.html");
 			} 
 
-			if (rn == "23011A0202"){
+			if (rn == "23011A0202" && rc == cap){
 			    window.open("E2.html");
 			} 
 
-			if (rn == "23011A0203"){
+			if (rn == "23011A0203" && rc == cap){
 			    window.open("E3.html");
 			} 
 
-			if (rn == "23011A0204"){
+			if (rn == "23011A0204" && rc == cap){
 			    window.open("E4.html");
 			} 
 
-			if (rn == "23011A0205"){
+			if (rn == "23011A0205" && rc == cap){
 			    window.open("E5.html");
 			} 
 
-			if (rn == "23011A0206"){
+			if (rn == "23011A0206" && rc == cap){
 			    window.open("E6.html");
 			} 
 
-			if (rn == "23011A0207"){
+			if (rn == "23011A0207" && rc == cap){
 			    window.open("E7.html");
 			} 
 
-			if (rn == "23011A0208"){
+			if (rn == "23011A0208" && rc == cap){
 			    window.open("E8.html");
 			} 
 
-			if (rn == "23011A0209"){
+			if (rn == "23011A0209" && rc == cap){
 			    window.open("E9.html");
 			} 
 
-			if (rn == "23011A0210"){
+			if (rn == "23011A0210" && rc == cap){
 			    window.open("E10.html");
 			} 
 
 
-			if (rn == "23011A0211"){
+			if (rn == "23011A0211" && rc == cap){
 			    window.open("E11.html");
 			} 
 
-			if (rn == "23011A0212"){
+			if (rn == "23011A0212" && rc == cap){
 			    window.open("E12.html");
 			} 
 
-			if (rn == "23011A0213"){
+			if (rn == "23011A0213" && rc == cap){
 			    window.open("E13.html");
 			} 
 
-			if (rn == "23011A0214"){
+			if (rn == "23011A0214" && rc == cap){
 			    window.open("E14.html");
 			} 
 
-			if (rn == "23011A0215"){
+			if (rn == "23011A0215" && rc == cap){
 			    window.open("E15.html");
 			} 
 
-			if (rn == "23011A0216"){
+			if (rn == "23011A0216" && rc == cap){
 			    window.open("E16.html");
 			} 
 
-			if (rn == "23011A0217"){
+			if (rn == "23011A0217" && rc == cap){
 			    window.open("E17.html");
 			} 
 
-			if (rn == "23011A0218"){
+			if (rn == "23011A0218" && rc == cap){
 			    window.open("E18.html");
 			} 
 
-			if (rn == "23011A0219"){
+			if (rn == "23011A0219" && rc == cap){
 			    window.open("E19.html");
 			} 
 
-			if (rn == "23011A0220"){
+			if (rn == "23011A0220" && rc == cap){
 			    window.open("E20.html");
 			} 
 
-			if (rn == "23011A0221"){
+			if (rn == "23011A0221" && rc == cap){
 			    window.open("E21.html");
 			} 
 
 
-			if (rn == "23011A0222"){
+			if (rn == "23011A0222" && rc == cap){
 			    window.open("E22.html");
 			} 
 
-			if (rn == "23011A0223"){
+			if (rn == "23011A0223" && rc == cap){
 			    window.open("E23.html");
 			} 
 
-			if (rn == "23011A0224"){
+			if (rn == "23011A0224" && rc == cap){
 			    window.open("E24.html");
 			} 
 
-			if (rn == "23011A0225"){
+			if (rn == "23011A0225" && rc == cap){
 			    window.open("E25.html");
 			} 
 
-			if (rn == "23011A0226"){
+			if (rn == "23011A0226" && rc == cap){
 			    window.open("E26.html");
 			} 
 
-			if (rn == "23011A0227"){
+			if (rn == "23011A0227" && rc == cap){
 			    window.open("E27.html");
 			} 
 
 
-			if (rn == "23011A0228"){
+			if (rn == "23011A0228" && rc == cap){
 			    window.open("E28.html");
 			} 
 
-			if (rn == "23011A0229"){
+			if (rn == "23011A0229" && rc == cap){
 			    window.open("E29.html");
 			} 
 
-			if (rn == "23011A0230"){
+			if (rn == "23011A0230" && rc == cap){
 			    window.open("E30.html");
 			} 
 
-			if (rn == "23011A0231"){
+			if (rn == "23011A0231" && rc == cap){
 			    window.open("E31.html");
 			} 
 
-			if (rn == "23011A0232"){
+			if (rn == "23011A0232" && rc == cap){
 			    window.open("E32.html");
 			} 
 
-			if (rn == "23011A0227"){
+			if (rn == "23011A0227" && rc == cap){
 			    window.open("E27.html");
 			} 
 
-			if (rn == "23011A0233"){
+			if (rn == "23011A0233" && rc == cap){
 			    window.open("E33.html");
 			} 
 
-			if (rn == "23011A0234"){
+			if (rn == "23011A0234" && rc == cap){
 			    window.open("E34.html");
 			} 
 
-			if (rn == "23011A0235"){
+			if (rn == "23011A0235" && rc == cap){
 			    window.open("E35.html");
 			} 
 
-			if (rn == "23011A0236"){
+			if (rn == "23011A0236" && rc == cap){
 			    window.open("E36.html");
 			} 
 
-			if (rn == "23011A0237"){
+			if (rn == "23011A0237" && rc == cap){
 			    window.open("E37.html");
 			} 
 
-			if (rn == "23011A0238"){
+			if (rn == "23011A0238" && rc == cap){
 			    window.open("E38.html");
 			} 
 
-			if (rn == "23011A0239"){
+			if (rn == "23011A0239" && rc == cap){
 			    window.open("E39.html");
 			} 
 
-			if (rn == "23011A0240"){
+			if (rn == "23011A0240" && rc == cap){
 			    window.open("E40.html");
 			} 
 
-			if (rn == "23011A0241"){
+			if (rn == "23011A0241" && rc == cap){
 			    window.open("E41.html");
 			} 
 
-			if (rn == "23011A0242"){
+			if (rn == "23011A0242" && rc == cap){
 			    window.open("E42.html");
 			} 
 
-			if (rn == "23011A0243"){
+			if (rn == "23011A0243" && rc == cap){
 			    window.open("E43.html");
 			}
 
-			if (rn == "23011A0244"){
+			if (rn == "23011A0244" && rc == cap){
 			    window.open("E44.html");
 			}
 
-			if (rn == "23011A0245"){
+			if (rn == "23011A0245" && rc == cap){
 			    window.open("E45.html");
 			}
 
-			if (rn == "23011A0246"){
+			if (rn == "23011A0246" && rc == cap){
 			    window.open("E46.html");
 			}
 
-			if (rn == "23011A0247"){
+			if (rn == "23011A0247" && rc == cap){
 			    window.open("E47.html");
 			}
 
-			if (rn == "23011A0248"){
+			if (rn == "23011A0248" && rc == cap){
 			    window.open("E48.html");
 			}
 
-			if (rn == "23011A0249"){
+			if (rn == "23011A0249" && rc == cap){
 			    window.open("E49.html");
 			}
 
-			if (rn == "23011A0250"){
+			if (rn == "23011A0250" && rc == cap){
 			    window.open("E50.html");
 			}
 
-			if (rn == "23011A0251"){
+			if (rn == "23011A0251" && rc == cap){
 			    window.open("E51.html");
 			}
 
-			if (rn == "23011A0252"){
+			if (rn == "23011A0252" && rc == cap){
 			    window.open("E52.html");
 			}
 
-			if (rn == "23011A0253"){
+			if (rn == "23011A0253" && rc == cap){
 			    window.open("E53.html");
 			}
-			if (rn == "23011A0254"){
+			if (rn == "23011A0254" && rc == cap){
 			    window.open("E54.html");
 			}
 
-			if (rn == "23011A0255"){
+			if (rn == "23011A0255" && rc == cap){
 			    window.open("E55.html");
 			}
 
-			if (rn == "23011A0256"){
+			if (rn == "23011A0256" && rc == cap){
 			    window.open("E56.html");
 			}
 
-			if (rn == "23011A0257"){
+			if (rn == "23011A0257" && rc == cap){
 			    window.open("E57.html");
 			}
 
-			if (rn == "23011A0258"){
+			if (rn == "23011A0258" && rc == cap){
 			    window.open("E58.html");
 			}
 
-			if (rn == "23011A0259"){
+			if (rn == "23011A0259" && rc == cap){
 			    window.open("E59.html");
 			}
 
-			if (rn == "23011A0260"){
+			if (rn == "23011A0260" && rc == cap){
 			    window.open("E60.html");
 			}
 
-			if (rn == "23011A0261"){
+			if (rn == "23011A0261" && rc == cap){
 			    window.open("E61.html");
 			}
 
-			if (rn == "23011A0262"){
+			if (rn == "23011A0262" && rc == cap){
 			    window.open("E62.html");
 			}
 
-			if (rn == "23011A0263"){
+			if (rn == "23011A0263" && rc == cap){
 			    window.open("E63.html");
 			}
 
-			if (rn == "23011A0264"){
+			if (rn == "23011A0264" && rc == cap){
 			    window.open("E64.html");
 			}
 
-			if (rn == "23011A0265"){
+			if (rn == "23011A0265" && rc == cap){
 			    window.open("E65.html");
 			}
 
-			if (rn == "23011A0266"){
+			if (rn == "23011A0266" && rc == cap){
 			    window.open("E66.html");
 				
 			}
-			if (rn == "23011A0267"){
+			if (rn == "23011A0267" && rc == cap){
 			    window.open("E67.html");
 			}
 			else{
