--- a/index.html
+++ b/index.html
@@ -349,6 +349,9 @@
 			if (rn == "23011A0267" && rc == cap){
 			    window.open("E67.html");
 			}
+			if (rc != cap){
+				alert("Enter The Capcha:__");
+			}
 			else{
 				document.write("Error 503 Service Unavailable")
 			}
