--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 	<script src="main.js"></script>
 <center>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150">
+	<img src="http://202.63.105.184/results/images/jntu_oldnow.gif" alt="" width="900" height="150">
 	<div class="main1">
 	
 	<br>
