--- a/E5.html
+++ b/E5.html
@@ -25,7 +25,7 @@
             <th>22ME02</th>
 		</tr>
 		<tr>
-			<th>SHAKINI KUMARI</th>
+			<th>SHALINI KUMARI</th>
 			<th>8</th>
 			<th>9</th>
 			<th>7</th>
@@ -45,7 +45,7 @@
 		height="100" width="500" cellpadding="5" id="TableScore">
 		<caption><b>Student Data</b></caption>
 		<tr>
-			<th width="180">SHAKINI KUMARI</th>
+			<th width="180">SHALINI KUMARI</th>
 			<th>Total CGPA</th>
 			<th>8.6</th>
 			<th>PASS</th>
