--- a/E22.html
+++ b/E22.html
@@ -53,7 +53,7 @@
 		
 	</table>
 		<br><br><br>
-		<font color="green" size"10"><b>Congratulations Your The Topper Of The Class</b></font>
+		<font color="green" size"10"><b>Congratulations You are The Topper Of The Class</b></font>
 		<br><font color="green" size"10"><b>UNDRALLA VENKATA RISHITHA PRIYA</b></font>
 	</center>
 	<script type="text/javascript">
