--- a/E23.html
+++ b/E23.html
@@ -54,7 +54,7 @@
 	</table>
 		<br><br><br>
 		<font color="green" size"10"><b>Congratulations You are The Topper Of The Class</b></font>
-		<br><font color="green" size"10"><b>UNDRALLA VENKATA RISHITHA PRIYA</b></font>
+		<br><font color="green" size"10"><b>CHENNA HAMSIKA ANYUNA</b></font>
 	</center>
 	<script type="text/javascript">
 		function Sub(){
