--- a/index.html
+++ b/index.html
@@ -1,1 +1,368 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>JNTUH 1-1 sem results </title><style type="text/css">body{background-image:url("bgimg.jpeg");background-size:100%;margin:0px;padding:0px}#a11,#a12,#a13,#a21,#a22,#a23,#a31,#a32,#a33,#b11,#b12,#b13,#b21,#b22,#b23,#b31,#b32,#b33{height:30px;width:200px;border-radius:9px;box-shadow:50%}h1{size:100px;color:green;padding:0px;margin:0px;text-align:center;text-shadow:30px;border-color:red;font-family:fantasy}.main1{background:20px;background-color:lightblue;border-color:black;background-size:20px;border:10%;border-radius:4%;width:700px;height:300px}</style></head><body><center><img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150"><div class="main1"><br><br><font size="6" color="black"><b>ROLL NO:</b></font><input type="text" id="a11" size="30" name=""><br><br><br><br><font size="6" color="black"><b>CAPCHA:</b></font><input type="text" id="a12" size="30" name=""><br><br><button value="submit" type="sybmit" onclick="but1()"><font size="10" color="black"><b>GET</b></font></button><br><br><br><br><br><br><br><font size="6" color="green">Enter CAPCHA As Shown: </font><br><img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png" width="400" height="70"></div></center><script>/FUNCTION [LOGIC] function but1() { var rn = document.getElementById("a11").value; var rc = document.getElementById("a12").value; var cap = "1738" if (rn == "23011A0201" && rc == cap){ window.open("E1.html"); } if (rn == "23011A0202" && rc == cap){ window.open("E2.html"); } if (rn == "23011A0203" && rc == cap){ window.open("E3.html"); } if (rn == "23011A0204" && rc == cap){ window.open("E4.html"); } if (rn == "23011A0205" && rc == cap){ window.open("E5.html"); } if (rn == "23011A0206" && rc == cap){ window.open("E6.html"); } if (rn == "23011A0207" && rc == cap){ window.open("E7.html"); } if (rn == "23011A0208" && rc == cap){ window.open("E8.html"); } if (rn == "23011A0209" && rc == cap){ window.open("E9.html"); } if (rn == "23011A0210" && rc == cap){ window.open("E10.html"); } if (rn == "23011A0211" && rc == cap){ window.open("E11.html"); } if (rn == "23011A0212" && rc == cap){ window.open("E12.html"); } if (rn == "23011A0213" && rc == cap){ window.open("E13.html"); } if (rn == "23011A0214" && rc == cap){ window.open("E14.html"); } if (rn == "23011A0215" && rc == cap){ window.open("E15.html"); } if (rn == "23011A0216" && rc == cap){ window.open("E16.html"); } if (rn == "23011A0217" && rc == cap){ window.open("E17.html"); } if (rn == "23011A0218" && rc == cap){ window.open("E18.html"); } if (rn == "23011A0219" && rc == cap){ window.open("E19.html"); } if (rn == "23011A0220" && rc == cap){ window.open("E20.html"); } if (rn == "23011A0221" && rc == cap){ window.open("E21.html"); } if (rn == "23011A0222" && rc == cap){ window.open("E22.html"); } if (rn == "23011A0223" && rc == cap){ window.open("E23.html"); } if (rn == "23011A0224" && rc == cap){ window.open("E24.html"); } if (rn == "23011A0225" && rc == cap){ window.open("E25.html"); } if (rn == "23011A0226" && rc == cap){ window.open("E26.html"); } if (rn == "23011A0227" && rc == cap){ window.open("E27.html"); } if (rn == "23011A0228" && rc == cap){ window.open("E28.html"); } if (rn == "23011A0229" && rc == cap){ window.open("E29.html"); } if (rn == "23011A0230" && rc == cap){ window.open("E30.html"); } if (rn == "23011A0231" && rc == cap){ window.open("E31.html"); } if (rn == "23011A0232" && rc == cap){ window.open("E32.html"); } if (rn == "23011A0227" && rc == cap){ window.open("E27.html"); } if (rn == "23011A0233" && rc == cap){ window.open("E33.html"); } if (rn == "23011A0234" && rc == cap){ window.open("E34.html"); } if (rn == "23011A0235" && rc == cap){ window.open("E35.html"); } if (rn == "23011A0236" && rc == cap){ window.open("E36.html"); } if (rn == "23011A0237" && rc == cap){ window.open("E37.html"); } if (rn == "23011A0238" && rc == cap){ window.open("E38.html"); } if (rn == "23011A0239" && rc == cap){ window.open("E39.html"); } if (rn == "23011A0240" && rc == cap){ window.open("E40.html"); } if (rn == "23011A0241" && rc == cap){ window.open("E41.html"); } if (rn == "23011A0242" && rc == cap){ window.open("E42.html"); } if (rn == "23011A0243" && rc == cap){ window.open("E43.html"); } if (rn == "23011A0244" && rc == cap){ window.open("E44.html"); } if (rn == "23011A0245" && rc == cap){ window.open("E45.html"); } if (rn == "23011A0246" && rc == cap){ window.open("E46.html"); } if (rn == "23011A0247" && rc == cap){ window.open("E47.html"); } if (rn == "23011A0248" && rc == cap){ window.open("E48.html"); } if (rn == "23011A0249" && rc == cap){ window.open("E49.html"); } if (rn == "23011A0250" && rc == cap){ window.open("E50.html"); } if (rn == "23011A0251" && rc == cap){ window.open("E51.html"); } if (rn == "23011A0252" && rc == cap){ window.open("E52.html"); } if (rn == "23011A0253" && rc == cap){ window.open("E53.html"); } if (rn == "23011A0254" && rc == cap){ window.open("E54.html"); } if (rn == "23011A0255" && rc == cap){ window.open("E55.html"); } if (rn == "23011A0256" && rc == cap){ window.open("E56.html"); } if (rn == "23011A0257" && rc == cap){ window.open("E57.html"); } if (rn == "23011A0258" && rc == cap){ window.open("E58.html"); } if (rn == "23011A0259" && rc == cap){ window.open("E59.html"); } if (rn == "23011A0260" && rc == cap){ window.open("E60.html"); } if (rn == "23011A0261" && rc == cap){ window.open("E61.html"); } if (rn == "23011A0262" && rc == cap){ window.open("E62.html"); } if (rn == "23011A0263" && rc == cap){ window.open("E63.html"); } if (rn == "23011A0264" && rc == cap){ window.open("E64.html"); } if (rn == "23011A0265" && rc == cap){ window.open("E65.html"); } if (rn == "23011A0266" && rc == cap){ window.open("E66.html"); } if (rn == "23011A0267" && rc == cap){ window.open("E67.html"); } if (rc != cap){ alert("Wrong Capcha:__"); } if (rc == ""){ alert("Enter The Capcha to Get Results__[NULL CAPCHA FOUND]"); } else{ document.write("Error 503 Service Unavailable") } }</script></body></html>
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>JNTUH 1-1 sem results </title>
+	<style type="text/css">
+	    body{
+	        background-image: url("bgimg.jpeg");
+	        background-size: 100%;
+	        margin: 0px;
+	        padding: 0px;
+	    }
+		#a11,#a12,#a13,#a21,#a22,#a23,#a31,#a32,#a33,#b11,#b12,#b13,#b21,#b22,#b23,#b31,#b32,#b33{
+/* 			background-color: lightblue; */
+			height: 30px;
+			width:200px;
+			border-radius: 9px;
+/* 			border-color: red; */
+			box-shadow: 50%;
+		}
+		h1{
+		    size:100px;
+		    color: green;
+		    padding: 0px;
+		    margin: 0px;
+		    text-align: center;	
+		    text-shadow: 30px;
+		    border-color: red;
+		    font-family:fantasy;
+		}
+		/* img {
+            border-radius: 50%;
+            width:150px;
+            height:150px;
+} */
+
+.main1{
+	background: 20px;
+	background-color: lightblue;
+	border-color: black;
+	
+	background-size: 20px;
+	border: 10%;
+	border-radius: 4%;
+	width: 700px;
+	height: 300px;
+}
+	</style>
+</head>
+<body>
+	<script src="main.js"></script>
+<center>
+	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150">
+	<div class="main1">
+	
+	<br><br>
+	<font size="6" color="black"><b>ROLL NO:</b> </font><input type="text" id="a11" size="30" name=""><br><br><br><br>
+	<font size="6" color="black"><b>CAPCHA:</b> </font><input type="text" id="a12" size="30" name=""><br><br>
+	
+
+	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="black"><b>GET</b></font></button><br><br><br><br><br><br><br>
+	<font size="6" color="green">Enter CAPCHA As Shown: </font><br>
+	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png" width="400" height="70">
+</div>
+</center>
+
+
+<!-- <script type="text/javascript"> -->
+<script>
+	
+					//FUNCTION [LOGIC]
+	
+	
+		function but1() {
+			var rn = document.getElementById("a11").value;
+			var rc = document.getElementById("a12").value;
+			var cap = "1738"
+			if (rn == "23011A0201" && rc == cap){
+			    window.open("E1.html");
+			} 
+
+			if (rn == "23011A0202" && rc == cap){
+			    window.open("E2.html");
+			} 
+
+			if (rn == "23011A0203" && rc == cap){
+			    window.open("E3.html");
+			} 
+
+			if (rn == "23011A0204" && rc == cap){
+			    window.open("E4.html");
+			} 
+
+			if (rn == "23011A0205" && rc == cap){
+			    window.open("E5.html");
+			} 
+
+			if (rn == "23011A0206" && rc == cap){
+			    window.open("E6.html");
+			} 
+
+			if (rn == "23011A0207" && rc == cap){
+			    window.open("E7.html");
+			} 
+
+			if (rn == "23011A0208" && rc == cap){
+			    window.open("E8.html");
+			} 
+
+			if (rn == "23011A0209" && rc == cap){
+			    window.open("E9.html");
+			} 
+
+			if (rn == "23011A0210" && rc == cap){
+			    window.open("E10.html");
+			} 
+
+
+			if (rn == "23011A0211" && rc == cap){
+			    window.open("E11.html");
+			} 
+
+			if (rn == "23011A0212" && rc == cap){
+			    window.open("E12.html");
+			} 
+
+			if (rn == "23011A0213" && rc == cap){
+			    window.open("E13.html");
+			} 
+
+			if (rn == "23011A0214" && rc == cap){
+			    window.open("E14.html");
+			} 
+
+			if (rn == "23011A0215" && rc == cap){
+			    window.open("E15.html");
+			} 
+
+			if (rn == "23011A0216" && rc == cap){
+			    window.open("E16.html");
+			} 
+
+			if (rn == "23011A0217" && rc == cap){
+			    window.open("E17.html");
+			} 
+
+			if (rn == "23011A0218" && rc == cap){
+			    window.open("E18.html");
+			} 
+
+			if (rn == "23011A0219" && rc == cap){
+			    window.open("E19.html");
+			} 
+
+			if (rn == "23011A0220" && rc == cap){
+			    window.open("E20.html");
+			} 
+
+			if (rn == "23011A0221" && rc == cap){
+			    window.open("E21.html");
+			} 
+
+
+			if (rn == "23011A0222" && rc == cap){
+			    window.open("E22.html");
+			} 
+
+			if (rn == "23011A0223" && rc == cap){
+			    window.open("E23.html");
+			} 
+
+			if (rn == "23011A0224" && rc == cap){
+			    window.open("E24.html");
+			} 
+
+			if (rn == "23011A0225" && rc == cap){
+			    window.open("E25.html");
+			} 
+
+			if (rn == "23011A0226" && rc == cap){
+			    window.open("E26.html");
+			} 
+
+			if (rn == "23011A0227" && rc == cap){
+			    window.open("E27.html");
+			} 
+
+
+			if (rn == "23011A0228" && rc == cap){
+			    window.open("E28.html");
+			} 
+
+			if (rn == "23011A0229" && rc == cap){
+			    window.open("E29.html");
+			} 
+
+			if (rn == "23011A0230" && rc == cap){
+			    window.open("E30.html");
+			} 
+
+			if (rn == "23011A0231" && rc == cap){
+			    window.open("E31.html");
+			} 
+
+			if (rn == "23011A0232" && rc == cap){
+			    window.open("E32.html");
+			} 
+
+			if (rn == "23011A0227" && rc == cap){
+			    window.open("E27.html");
+			} 
+
+			if (rn == "23011A0233" && rc == cap){
+			    window.open("E33.html");
+			} 
+
+			if (rn == "23011A0234" && rc == cap){
+			    window.open("E34.html");
+			} 
+
+			if (rn == "23011A0235" && rc == cap){
+			    window.open("E35.html");
+			} 
+
+			if (rn == "23011A0236" && rc == cap){
+			    window.open("E36.html");
+			} 
+
+			if (rn == "23011A0237" && rc == cap){
+			    window.open("E37.html");
+			} 
+
+			if (rn == "23011A0238" && rc == cap){
+			    window.open("E38.html");
+			} 
+
+			if (rn == "23011A0239" && rc == cap){
+			    window.open("E39.html");
+			} 
+
+			if (rn == "23011A0240" && rc == cap){
+			    window.open("E40.html");
+			} 
+
+			if (rn == "23011A0241" && rc == cap){
+			    window.open("E41.html");
+			} 
+
+			if (rn == "23011A0242" && rc == cap){
+			    window.open("E42.html");
+			} 
+
+			if (rn == "23011A0243" && rc == cap){
+			    window.open("E43.html");
+			}
+
+			if (rn == "23011A0244" && rc == cap){
+			    window.open("E44.html");
+			}
+
+			if (rn == "23011A0245" && rc == cap){
+			    window.open("E45.html");
+			}
+
+			if (rn == "23011A0246" && rc == cap){
+			    window.open("E46.html");
+			}
+
+			if (rn == "23011A0247" && rc == cap){
+			    window.open("E47.html");
+			}
+
+			if (rn == "23011A0248" && rc == cap){
+			    window.open("E48.html");
+			}
+
+			if (rn == "23011A0249" && rc == cap){
+			    window.open("E49.html");
+			}
+
+			if (rn == "23011A0250" && rc == cap){
+			    window.open("E50.html");
+			}
+
+			if (rn == "23011A0251" && rc == cap){
+			    window.open("E51.html");
+			}
+
+			if (rn == "23011A0252" && rc == cap){
+			    window.open("E52.html");
+			}
+
+			if (rn == "23011A0253" && rc == cap){
+			    window.open("E53.html");
+			}
+			if (rn == "23011A0254" && rc == cap){
+			    window.open("E54.html");
+			}
+
+			if (rn == "23011A0255" && rc == cap){
+			    window.open("E55.html");
+			}
+
+			if (rn == "23011A0256" && rc == cap){
+			    window.open("E56.html");
+			}
+
+			if (rn == "23011A0257" && rc == cap){
+			    window.open("E57.html");
+			}
+
+			if (rn == "23011A0258" && rc == cap){
+			    window.open("E58.html");
+			}
+
+			if (rn == "23011A0259" && rc == cap){
+			    window.open("E59.html");
+			}
+
+			if (rn == "23011A0260" && rc == cap){
+			    window.open("E60.html");
+			}
+
+			if (rn == "23011A0261" && rc == cap){
+			    window.open("E61.html");
+			}
+
+			if (rn == "23011A0262" && rc == cap){
+			    window.open("E62.html");
+			}
+
+			if (rn == "23011A0263" && rc == cap){
+			    window.open("E63.html");
+			}
+
+			if (rn == "23011A0264" && rc == cap){
+			    window.open("E64.html");
+			}
+
+			if (rn == "23011A0265" && rc == cap){
+			    window.open("E65.html");
+			}
+
+			if (rn == "23011A0266" && rc == cap){
+			    window.open("E66.html");
+				
+			}
+			if (rn == "23011A0267" && rc == cap){
+			    window.open("E67.html");
+			}
+			if (rc != cap){
+				alert("Wrong Capcha:__");
+			}
+			if (rc == ""){
+				alert("Enter The Capcha to Get Results__[NULL CAPCHA FOUND]");
+			}
+			else{
+				document.write("Error 503 Service Unavailable")
+			}
+		}
+	</script>
+<!-- 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+
+</body>
+</html>
