--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 
 <!-- <script type="text/javascript"> -->
+<!-- 
 <script>
 	
 					//FUNCTION [LOGIC]
@@ -361,8 +362,8 @@
 				document.write("Error 503 Service Unavailable")
 			}
 		}
-	</script>
-<!-- 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+	</script> -->
 
 </body>
 
+</html>
