--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>JNTUH 1-1 sem results </title>
-	<style type="text/css">
+	<!-- <style type="text/css">
 	    body{
 	        background-image: url("bgimg.jpeg");
 	        background-size: 100%;
@@ -48,12 +48,12 @@
 	width: 700px;
 	height: 300px;
 }
-	</style>
+	</style> -->
 </head>
 <body>
-	<script src="main.js"></script>
+	<!-- <script src="main.js"></script> -->
 <center>
-	<img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150">
+	<!-- <img src="https://drnd.jntuh.ac.in/newdesign/assets/img/jntuhlogonew01.png" alt="" width="900" height="150">
 	<div class="main1">
 	
 	<br><br>
@@ -64,8 +64,10 @@
 	<button value="submit" type="sybmit" onclick="but1()"><font size="10" color="black"><b>GET</b></font></button><br><br><br><br><br><br><br>
 	<font size="6" color="green">Enter CAPCHA As Shown: </font><br>
 	<img src="https://user-images.githubusercontent.com/25476729/63083566-a8bc6880-bf66-11e9-82cc-9609c2fd8929.png" width="400" height="70">
-</div>
+</div> -->
+
 </center>
+<h1>http code 0 exit</h1>
 
 
 <!-- <script type="text/javascript"> -->
