--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>JNTUH 1-1 sem results </title>
 	<!-- <style type="text/css">
