--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
-		
+		<title>
+			server 503 exit 0
+		</title>
 	</head>
 	<body>
 		<p>	HTTP Status Code 503 - Service Unavailable</p>
